apps/base/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: 8989
  type: ClusterIP
